# eular

./: .gitignore  .gitmodules  README.md
config/: CMakeLists.txt  Makefile  README  test_yaml.cc
config/cmake/: cmake_uninstall.cmake.in  configConfig.cmake.in
config/examples/: CMakeLists.txt  example_config_observer.cpp  example_ini_complex.cpp  example_json_complex.cpp  example_xml_complex.cpp  example_yaml_complex.cpp
config/src/: IniConfig.cpp  XmlConfig.cpp  YamlConfig.cpp  json.cpp  json_node.cpp  rwmutex.cpp  tinyxml2.cpp  yaml.cpp  yaml_node.cpp
config/test/: CMakeLists.txt  complex_config.json  invalid_ini.ini  syntax_sample.yaml  test_config_observer_catch.cc  test_config_observer_perf.cc  test_ini_config_catch.cc  test_json_config.cpp  test_json_parser_node_catch.cc  test_xml_config_catch.cc  test_yaml_config.cpp  test_yaml_parser_node_catch.cc  xml_config.xml
crypto/: CMakeLists.txt  sha.h
crypto/bak/: Makefile  aes_openssl.cpp  aes_openssl.h  base64_chromium.cpp  base64_chromium.h  crypto.h  md5_openssl.cpp  md5_openssl.h  rsa_openssl.cpp  rsa_openssl.h  sha_openssl.cc  sha_openssl.h
crypto/cmake/: FindMbedTLS.cmake  FindNettle.cmake
crypto/examples/: CMakeLists.txt  aes_example.cc  base64_example.cc  crc32_example.cc  md5_example.cc  rsa_example.cc  sha_example.cc
crypto/gnutls/: sha_gnutls.cpp
crypto/mbedtls/: md5_mbedtls.cpp  sha_mbedtls.cpp
crypto/openssl/: sha_openssl.cpp
crypto/src/: base64.cpp
crypto/test/: test_aes.cc  test_chromium_base64.cc  test_md5.cc  test_rsa.cc  test_sha.cc
crypto/win/: sha_win.cpp
kcp/: .gitignore  54321.pcap  CMakeLists.txt  TODO.md  protocol.txt
kcp/cmake/: configure_version.cmake  kcp_version.h.in  musl-toolchain.cmake
kcp/doc/: KCP_STUN_P2P穿透设计方案.md
kcp/examples/: CMakeLists.txt  file_info.cc  file_info.h  kcp_bench.sh  kcp_client  kcp_client.c  kcp_file_server.cc  kcp_peer.cc  kcp_sendfile.cc  kcp_server  kcp_server.c  ntrs_kcp_client.cc
kcp/include/: kcp_config.h  kcp_def.h  kcp_error.h  kcp_log.h  kcp_net_def.h  kcp_time.h  kcp_version.h  kcpp.h
kcp/internal/: connection_set.h  kcp_endian.h  kcp_inc.h  kcp_internal.h  kcp_mtu.h  kcp_net_utils.h  kcp_protocol.h
kcp/src/: connection_set.c  kcp_internal.c  kcp_log.c  kcp_mtu.c  kcp_net_utils.c  kcp_ntrs_stub.c  kcp_protocol.c  kcp_time.c  kcpp.c
kcp/test/: CMakeLists.txt  kcp_echo_test_client.c  test_list.c  test_rbtree.c
kcp/wireshark/: kcp.lua
libevent/: CMakeLists.txt
libevent/cmake/: event_wrapperConfig.cmake.in  musl-toolchain.cmake
libevent/doc/: notify_perf.md
libevent/libares_V1_34_1/: CMakeLists.txt
libevent/libevent_V2_1_10/: CMakeLists.txt
libevent/src/: dns_resolve.cpp  event_async.cpp  event_base.cpp  event_loop.cpp  event_poll.cpp  event_signal.cpp  event_timer.cpp  single_async.cpp
libevent/test/: CMakeLists.txt  test_dns_resolve.cc  test_event_async.cc  test_event_async_perf.cc  test_event_loop.cc  test_notify_hotpath_perf.cc  test_single_async_perf.cc
libutp/: .gitignore  CMakeLists.txt  README  backup.md  bbr_v1.hpp  nat.md  utp.pcap  协议设计文档.md
libutp/3rd/: siphash.c  siphash.h  test_siphash.cc
libutp/c/: .clang-format  CMakeLists.txt  ERRORS.md  README.md  STYLE.md
libutp/cmake/: Findlsquic.cmake  libutpConfig.cmake.in  musl-toolchain.cmake  uninstall.cmake.in  version.h.in
libutp/cpp/: CMakeLists.txt  README.md
libutp/doc/: 0-rtt-协议同步-v1.md  bbr.md  cubic.md  error_handling_design.md  frame.md  libutp_实现设计文档.md  performance_optimization_send_path.md  quic-flow-control.md  stream_优先级调度设计草案.md  全包加密与无状态可验证CID混淆方案.md  写链路内存流转分析.md  协议设计文档 V2.md  协议设计文档.md  测试计划.md  测试计划v2.md  设计实现文档.md  连接与异常处理流程.md  零拷贝与红黑树接收模型.md  默认值与调参指南.md
libutp/examples/: CMakeLists.txt  echo_client.cpp  echo_server.cpp  mtu_keepalive_client.cpp  mtu_keepalive_server.cpp  session_resume_client.cpp  session_resume_server.cpp
libutp/lsquic/: CMakeLists.txt  echo_cert.h  lsquic_echo_client.c  lsquic_echo_server.c  prog.c  prog.h  test_cert.c  test_cert.h  test_common.h
libutp/openspec/: config.yaml
libutp/src/: commom.h  context.cpp  make_unique.hpp  malo.hpp  stream.cpp  transport_param.cpp  utp.cpp  version.h
libutp/test/: CMakeLists.txt  test_ack_behavior.cc  test_bbr_config.cc  test_bbr_new_params.cc  test_connection_stream_layer.cc  test_context_cid_alloc.cc  test_context_integration.cc  test_context_zero_rtt.cc  test_cubic.cc  test_fault_injection_mmsg.cc  test_fault_injection_new.cc  test_frame_ack_decode.cc  test_frame_ack_frequency.cc  test_frame_crypto.cc  test_frame_flow_control.cc  test_frame_handshake_aux.cc  test_frame_path.cc  test_frame_reset_stream.cc  test_frame_session_token.cc  test_frame_transport_params.cc  test_mm.cc  test_mtu.cc  test_network_path.cc  test_packet_in.cc  test_packet_out.cc  test_passive_conn_extra.cc  test_public_api_errno.cc  test_receive_history.cc  test_retrans_repack.cc  test_ring_buffer.cc  test_status.cc  test_stream_impl.cc  test_stream_zero_copy_views.cc
log/: CMakeLists.txt  Makefile  log.cpp  log.h  log_format.cpp  log_level.h  log_main.cpp  log_main.h  log_write.h
log/benchmark/: bench_liblog.cc
log/cmake/: cmake_uninstall.cmake.in  logConfig.cmake.in
log/examples/: logcat.cc
log/src/: callstack.cpp  log.cpp  log_format.cpp  log_level.h  log_main.cpp  log_main.h  log_write.cpp  log_write.h  log_zlog.cpp  mutex.hpp
log/test/: test_callstack.cc  testlog.cc
ntrs/: CMakeLists.txt  README.md
ntrs/cmake/: musl-toolchain.cmake
ntrs/doc/: NTRS_KCP开发清单.md  NTRS_KCP架构说明.md  NTRS_私有探测协议草案.md  NTRS_私有探测协议说明.md
ntrs/examples/: CMakeLists.txt  ntrs_hub.cc  ntrs_natc.cc  ntrs_natc_multi.cc  ntrs_node.cc  ntrs_peer.cc
ntrs/include/: mqtt_client.h  ntrs_client.h  ntrs_codec.h  ntrs_hub_state.h  ntrs_io.h
ntrs/script/: hub_start.sh  node_start.sh
ntrs/src/: md5.c  mqtt_client.cpp  (+9 more)
reflection/: CMakeLists.txt  README.md  mini_reflect.h  type_info.h
stun/: CMakeLists.txt  CMakePresets.json  DEPLOYMENT_2NODES.md  ORION_MQTT_DEPLOYMENT.md
utils/: CMakeLists.txt  CMakePresets.json  Makefile  README.md
variant/: CMakeLists.txt  README  test_variant.cpp
(+602 files in other folders)
